--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
   <body>
     <input type="text" id="search-box" />
     <ul class="country-list"></ul>
-    <button type="submit" class="js-country">Пошук</button>
+    <!-- <button type="submit" class="js-country">Пошук</button> -->
     <div class="country-info"></div>
 
-    <form action="submit" class="js-serch">
+    <!-- <form action="submit" class="js-serch">
       <input type="text" name="query" />
       <select name="days">
         <option value="3">3days</option>
@@ -20,7 +20,7 @@
         <option value="7">7days</option>
       </select>
       <button type="submit">Пошук</button>
-    </form>
-    <script src="index.js" type="module"></script>
+    </form> -->
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
